macros/tests/unhappy/expected_unchecked_param_type_str_literal.test.stderr
error: expected string literal
  --> tests/unhappy/expected_unchecked_param_type_str_literal.test.rs:10:23
   |
10 |         #[wasm_export(unchecked_param_type = notStringLiteral)]
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
